force-app/main/default/objects/Character__c/Character__c.object-meta.xml
<CustomObject>
    <description>Stores Rick and Morty characters pulled from the API</description>
    <label>Character</label>
    <nameField>
        <label>Character Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Characters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>