force-app/main/default/objects/Character__c/fields/API_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>API_Last_Sync__c</fullName>
    <label>API Last Sync</label>
    <type>DateTime</type>
</CustomField>