force-app/main/default/objects/Character__c/fields/Character_Type__c.field-meta.xml
<CustomField>
    <fullName>Character_Type__c</fullName>
    <label>Character Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>