force-app/main/default/objects/Character__c/fields/Current_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Location_Name__c</fullName>
    <label>Current Location Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>