force-app/main/default/objects/Character__c/fields/Origin_Name__c.field-meta.xml
<CustomField>
    <fullName>Origin_Name__c</fullName>
    <label>Origin Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>