force-app/main/default/objects/Character__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <length>18</length>
    <type>Text</type>
</CustomField>