force-app/main/default/objects/Character__c/fields/Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Threat_Level__c</fullName>
    <label>Threat Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Extreme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>