force-app/main/default/objects/Character__c/fields/Threat_Score__c.field-meta.xml
<CustomField>
    <fullName>Threat_Score__c</fullName>
    <label>Threat Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>